Sculpt symmetry don't work in clipping border view mode #46583

Closed
opened 2015-10-24 10:46:21 +02:00 by brothermechanic · 7 comments

System Information
Operating system and graphics card
Gentoo and64 gtx660m
Blender Version
Broken:all

Short description of error
Hello
I found a bug
Sculpt symmetry dont have any affect when i sculpt model in clipping border view mode
Exact steps for others to reproduce the error
Try to sculpt any model in clipping border mode (ALT+B) with (for ex) X symmery

Please fix it
Thank you for great software!

**System Information** Operating system and graphics card Gentoo and64 gtx660m **Blender Version** Broken:all **Short description of error** Hello I found a bug Sculpt symmetry dont have any affect when i sculpt model in clipping border view mode **Exact steps for others to reproduce the error** Try to sculpt any model in clipping border mode (ALT+B) with (for ex) X symmery Please fix it Thank you for great software!

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @brothermechanic

Added subscriber: @brothermechanic

Added subscribers: @Psy-Fi, @Sergey

Added subscribers: @Psy-Fi, @Sergey

It works for as long as both sized are visible, meaning strokes are clipped by the border. Perhaps we should clip original stroke but not the mirrored one. Will have a closer look later. Or maybe @Psy-Fi will? :)

It works for as long as both sized are visible, meaning strokes are clipped by the border. Perhaps we should clip original stroke but not the mirrored one. Will have a closer look later. Or maybe @Psy-Fi will? :)

I remember there was an older bug like that and consensus then was to keep the current behaviour. It does make sense to clip against original stroke (or mirrored border) to keep symmetry though.

I remember there was an older bug like that and consensus then was to keep the current behaviour. It does make sense to clip against original stroke (or mirrored border) to keep symmetry though.

This issue was referenced by 2b445b83fe

This issue was referenced by 2b445b83fe0ac8eb4ca0e8a1444bde73ff3b50b3

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46583
No description provided.