Fix T46583: Sculpt symmetry don't work in clipping border view mode

This is an attempt to solve the issue by doing clip test on the original
side of the stroke. Some extra testing is required.